[package]
name = "ostium-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Ostium perpetuals protocol on Arbitrum"
license = "MIT"
repository = "https://github.com/hypersignals/ostium-fordefi"
keywords = ["ethereum", "arbitrum", "perpetuals", "defi", "ostium"]

[dependencies]
# Ethereum/EVM - latest version
alloy = { version = "1.5", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for Fordefi API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Error handling - use eyre for simplicity
eyre = "0.6"

# Fordefi signing (P-256 ECDSA)
p256 = { version = "0.13", features = ["pem", "ecdsa", "pkcs8"] }
sec1 = { version = "0.7", features = ["pem"] }
base64 = "0.22"
hex = "0.4"

# Logging
tracing = "0.1"

# Environment variables
dotenvy = "0.15"
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[example]]
name = "flow"
path = "examples/flow.rs"
